# 2b-rs

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: build-and-release.yml  build-container.yml  build-docker.yml  build.yml
.woodpecker/: build.yml  container.yml
bot-coreutils/: Cargo.toml
bot-coreutils/src/: lib.rs  process.rs  random.rs  shuffle.rs  string.rs  url.rs
bot-coreutils/src/tests/: mod.rs  string_tests.rs  url_tests.rs
bot-database/: Cargo.toml
bot-database/migration/: Cargo.toml
bot-database/migration/src/: lib.rs  m20220029_164527_change_timestamp_format.rs  m20220101_000001_create_table.rs  main.rs
bot-database/migrations/2021-04-09-075309_create_tables/: up.sql
bot-database/migrations/2021-04-09-095329_create_guild_playlists/: down.sql
bot-database/migrations/2021-04-12-115141_create_gifs/: down.sql  up.sql
bot-database/migrations/2021-04-12-133308_create_statistics/: down.sql  up.sql
bot-database/migrations/2021-04-13-144951_create_youtube_songs/: down.sql  up.sql
bot-database/migrations/2021-04-16-064403_create_ephemeral_messages/: down.sql  up.sql
bot-database/migrations/2021-04-21-095152_rename_gifs_table/: down.sql  up.sql
bot-database/migrations/2021-08-17-100505_add_events_table/: up.sql
bot-database/src/: database.rs  error.rs  lib.rs  models.rs  schema.rs
bot-database/src/database/: ephemeral_messages.rs  events.rs  gifs.rs  guild_playlists.rs  guild_settings.rs  media.rs  mod.rs  statistics.rs  youtube_songs.rs
bot-database/src/entity/: ephemeral_messages.rs  guild_playlists.rs  guild_settings.rs  media.rs  mod.rs  prelude.rs  statistics.rs  youtube_songs.rs
bot-serenityutils/: Cargo.toml
bot-serenityutils/src/: core.rs  ephemeral_message.rs  error.rs  lib.rs  macros.rs
bot-serenityutils/src/menu/: container.rs  controls.rs  menu.rs  mod.rs  page.rs  traits.rs  typedata.rs
database/: Cargo.toml
database/migrations/2021-04-09-075309_create_tables/: down.sql
database/migrations/2021-04-09-095329_create_guild_playlists/: up.sql
database/src/: database.rs  error.rs  lib.rs  models.rs  schema.rs
src/: client.rs  handler.rs  main.rs
src/commands/: common.rs  mod.rs
src/commands/minecraft/: enchantment.rs  item.rs  mod.rs
src/commands/misc/: about.rs  add_gif.rs  add_media.rs  clear.rs  fuck.rs  gifs.rs  help.rs  inspirobot.rs  media.rs  mod.rs  pain.rs  party.rs  pekofy.rs  ping.rs  qalc.rs  reset_lavalink.rs  sauce.rs  shutdown.rs  stats.rs  time.rs  timezones.rs  xkcd.rs
src/commands/music/: clear.rs  clear_queue.rs  current.rs  equalize.rs  equalizer.rs  join.rs  leave.rs  lyrics.rs  mod.rs  move_song.rs  pause.rs  play.rs  play_next.rs  playlists.rs  queue.rs  remove_song.rs  save_playlist.rs  shuffle.rs  skip.rs  utils.rs
src/commands/settings/: get.rs  mod.rs  set.rs
src/commands/weeb/: fubuki.rs  korone.rs  matsuri.rs  miko.rs  mod.rs  pekofy.rs  rushia.rs  sauce.rs  theme.rs
src/commands/weeb/hololive/: amelia.rs  gura.rs  haachama.rs  inanis.rs  kronii.rs  matsuri.rs  mod.rs  mumei.rs  nene.rs  pekofy.rs  polka.rs  watame.rs
src/database/: guild.rs  mod.rs
src/database/scripts/: create_tables.sql  mod.rs  update_tables.sql
src/messages/: gifs.rs  inspirobot.rs  mod.rs  music.rs  sauce.rs  theme.rs  xkcd.rs
src/messages/minecraft/: item.rs
src/messages/music/: equalizer.rs  mod.rs  no_voicechannel.rs  now_playing.rs  queue.rs
src/providers/: constants.rs  minecraft.rs  mod.rs  qalc.rs  settings.rs
src/providers/music/: inspirobot.rs  lavalink.rs  lyrics.rs  mod.rs  player.rs  player_events.rs  queue.rs  responses.rs  spotify.rs  youtube_dl.rs
src/providers/ytdl/: mod.rs  playlist_entry.rs
src/utils/: context_data.rs  error.rs  logging.rs  messages.rs  mod.rs  process.rs  store.rs
