[workspace]
members=["bot-coreutils", "bot-database", "bot-database/migration", "."]

[package]
name = "tobi-rs"
version = "0.9.13"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bot-database = {path="./bot-database"}
bot-coreutils = {path="./bot-coreutils"}
serenity = "0.10.10"
dotenv = "0.15.0"
serde_derive = "1.0.136"
serde = "1.0.136"
thiserror = "1.0.30"
minecraft-data-rs = "0.4.5"
songbird = "0.2.2"
serde_json = "1.0.79"
rand = "0.8.5"
regex = "1.5.5"
aspotify = "0.7.1"
lazy_static = "1.4.0"
futures = "0.3.21"
chrono = "0.4.19"
sysinfo = "0.23.8"
reqwest = "0.11.10"
chrono-tz = "0.6.1"
sauce-api = "0.9.3"
rustc_version_runtime = "0.2.1"
trigram = "0.4.4"
typemap_rev = "0.1.5"
youtube-metadata = "0.2.0"
xkcd-search = "0.1.2"
animethemes-rs = "0.3.0"
build-time = "0.1.1"
tracing-subscriber = {version = "0.3.10", features = ["env-filter"] }
tracing = "0.1.32"

[dependencies.serenity-rich-interaction]
version = "0.3.0"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt-multi-thread"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
rev = "2487c295"
features=["native", "serenity", "songbird", "tracing-log"]
default-features = false
