[package]
name = "bot-coreutils"
version = "0.1.1"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.4.0", features = ["process", "io-util"]}
log = "0.4.14"
url = "2.2.1"
mime_guess = "2.0.3"
rand = "0.8.3"