[package]
name = "bot-database"
version = "0.6.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.19"
thiserror = "1.0.31"
tracing = "0.1.34"

[dependencies.sea-orm]
version = "0.8.0"
features = ["runtime-tokio-native-tls", "sqlx-postgres"]

[dependencies.migration]
path = "./migration"
