[package]
name = "bot-database"
version = "0.6.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.22"
thiserror = "1.0.37"
tracing = "0.1.37"

[dependencies.sea-orm]
version = "0.9.3"
features = ["runtime-tokio-native-tls", "sqlx-postgres"]

[dependencies.migration]
path = "./migration"
